--- a/css/buttons.bulma.scss
+++ b/css/buttons.bulma.scss
@@ -13,11 +13,6 @@ div.dt-button-collection {
 		min-width: 100%;
 	}
 
-	div.dt-button-collection-title {
-		background-color: white;
-		border: 1px solid rgba(0, 0, 0, 0.15);
-	}
-
 	div.dt-btn-split-wrapper {
 		width: 100%;
 		padding-left: 5px;
@@ -62,7 +57,18 @@ div.dt-button-collection {
 	@include dtb-fixed-collection();
 
 	&.fixed {
+		// We need the dropdown stylings on the container, not the dropdown content
 		max-width: none;
+		display: block;
+		box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.02);
+		border-radius: 4;
+		padding-top: .5rem;
+
+		.dropdown-content {
+			box-shadow: none;
+			padding-top: 0;
+			border-radius: 0;
+		}
 
 		&:before,
 		&:after {
