--- a/css/buttons.dataTables.scss
+++ b/css/buttons.dataTables.scss
@@ -232,10 +232,6 @@ div.dt-button-collection {
 
 	&.fixed {
 		.dt-button {
-			margin-left: 0.167em !important;
-			margin-right: 0.167em !important;
-			margin-bottom: 0.333em !important;
-			
 			&:first-child {
 				margin-top: 0;
 				border-top-left-radius: 0;
@@ -245,12 +241,6 @@ div.dt-button-collection {
 			&:last-child {
 				border-bottom-left-radius: 0;
 				border-bottom-right-radius: 0;
-			}
-		}
-
-		&.columns {
-			.dt-button:first-child {
-				margin-top: 4px;
 			}
 		}
 	}
